# r3r_decentralized_gatekeeper

./: .gitignore  Manifest.toml  Project.toml  README.md  test_notebook.ipynb
examples/: explanatory_figure_base.jl  ipopt_baseline_utils.jl  nmpc_animation.jl  nmpc_performance_graphs.jl  r3r_evolution.jl  r3r_evolution_simple_indoor.jl  r3r_evolution_simple_indoor_NEIGHBORS.jl
src/: 2d_double_integrators.jl  2d_path_tracker.jl  animation_data.csv  double_integrators_gatekeeper.jl  gatekeeper.jl  init_repl.jl  output.csv  plot_utils.jl  r3r.jl  strrt_star.jl  test_notebook.ipynb
src/agents/: dubins_agent_2d_model.jl
src/common/: R3RCommon.jl  types.jl  utils.jl
src/ompl_src/: .clangd  CMakeLists.txt  README.md
src/ompl_src/include/: st_rrt_impl.hpp
src/ompl_src/src/: ompl_bindings.cpp  st_rrt_impl.cpp
src/ompl_src/test/: DEMO.cpp  test_cpp_planning.cpp  test_julia_interface.jl
test/: Manifest.toml  Project.toml  runtests.jl  test_utils.jl
